third_party/move/move-compiler-v2/tests/more-v1/parser/function_incomplete.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_incomplete.move:5:1
  │
5 │
  │ ^
  │
  │ Unexpected end-of-file
  │ Expected an expression term
